--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -241,6 +241,8 @@
 	margin-bottom: 0;
 	text-transform: capitalize;
 	list-style: none;
+	float: right;
+	clear: both;
 
   > li {
 	margin-right: 0;
